--- a/agenda.kv
+++ b/agenda.kv
@@ -1,7 +1,7 @@
 MDFloatLayout:
 
 	MDRaisedButton:
-		text: "Open Date Picker"
+		text: "Open a Date Picker"
 		pos_hint: {'center_x': .5, 'center_y': .5}
 		on_release: app.show_date_picker()
 
